@@ -2,6 +2,9 @@
 01 Oct 2007 - 2.5.0-dev3
 ------------------------
 
+ * Added a @containsWord operator that will match a given string anywhere in
+   the target value, but only on word boundaries.
+
  * Used new TX:LAST_MATCHED_VAR_NAME to store the last matched variable name
    so that it can be more easily used by rules.
 
